fix some typos, update readme

--- a/BandTracker/Views/Band/Details.cshtml
+++ b/BandTracker/Views/Band/Details.cshtml
@@ -13,7 +13,7 @@
     }
   </ul>
 }
-<h4>Enroll in which venue?</h4>
+<h4>Add band to which venue?</h4>
 <form action='/bands/@Model["selectedBand"].GetId()/venues/new' method='post'>
   <label for='venue-id'>Select a venue</label>
   <select id='venue-id' name='venue-id' type='text'>
