--- a/BandTracker/Views/Venue/Details.cshtml
+++ b/BandTracker/Views/Venue/Details.cshtml
@@ -5,7 +5,7 @@
 <hr />
 @if (@Model["venueBands"].Count != 0)
 {
-  <h4>Here are all the bands in this venue:</h4>
+  <h4>Here are all the bands that have played at this venue:</h4>
   <ul>
     @foreach (var band in @Model["venueBands"])
     {
