--- a/BandTracker/Views/Venue/UpdateVenue.cshtml
+++ b/BandTracker/Views/Venue/UpdateVenue.cshtml
@@ -6,10 +6,10 @@
         }
   </select>
 
-  <label for="new-venue-name">Enter New Venue name:</label>
+  <label for="new-venue-name">Enter new venue name:</label>
   <input id="new-venue-name" name="new-venue-name" type="text">
 
-  <button type="submit">Update Venue Name</button>
+  <button type="submit">Update venue Name</button>
 </form>
 
 <h4><a href="/">Return home</a></h4>
